[package]
name = "pallet-acurast-hyperdrive-outgoing"
authors = ["Papers AG", "Parity Technologies <admin@parity.io>"]
description = "Acurast Hyperdrive is a building block allowing for general bidirectional message passing"
version = { workspace = true }
license = "MIT"
homepage = "https://docs.acurast.com/"
edition = "2021"
publish = false
repository = "https://github.com/acurast/acurast-core"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
jsonrpsee = { version = "0.16.2", features = ["client-core", "server", "macros"], optional = true }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0", optional = true }

# Acurast
pallet-acurast = { path = "../acurast", default-features = false }
pallet-acurast-marketplace = { path = "../marketplace", default-features = false}
acurast-common = { path = "../acurast/common", default-features = false }
pallet-acurast-hyperdrive = {path = "../hyperdrive", default-features = false }
mmr-lib = { package = "acurast-merkle-mountain-range",  git = "https://github.com/Acurast/merkle-mountain-range", default-features = false }

acurast-core-ink = { path = "../../ink/core", default-features = false }

# EVM
rlp = { version = "0.5.2", default-features = false }
alloy-sol-types = { version = "0.3.1", default-features = false }
alloy-primitives = { version = "0.3.1", default-features = false }

# SDKs
tezos-core = { git = "https://github.com/airgap-it/tezos-rust-sdk", default-features = false, branch = "feat/nostd" }
tezos-michelson = { git = "https://github.com/airgap-it/tezos-rust-sdk", default-features = false, branch = "feat/nostd" }
derive_more = { version = "0.99.17", default-features = false }
strum = { version = "0.24.1", default-features = false }
strum_macros = { version = "0.24.1", default-features = false }
once_cell = { version = "1.17.1", default-features = false }

# Benchmarks
hex-literal = { version = "0.3", optional = true }
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0", optional = true, default-features = false }

# Substrate
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0", default-features = false }
scale-info = { version = "2.2.0", default-features = false, features = [
	"derive",
] }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0", default-features = false }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0", default-features = false }

# for RPC
serde = { version = "1.0.188", features = ["derive"], default-features = false }
thiserror = "1.0"
log = { version = "0.4.17", default-features = false }

# for mmr-gadget
futures = { version = "0.3", optional = true }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0", default-features = false, optional = true }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0", default-features = false, optional = true }

[dev-dependencies]
hex-literal = "0.3"
serde_json = "1.0.85"

array-bytes = "4.1"
env_logger = "0.9"
itertools = "0.10.3"

# for mmr-gadget tests
parking_lot = "0.12.1"
sc-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0", default-features = false }
sp-consensus = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0", default-features = false }
sp-tracing = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0", default-features = false }
substrate-test-runtime-client = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0", default-features = false }
tokio = "1.17.0"

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"acurast-common/std",
	"pallet-acurast/std",
	"pallet-acurast-marketplace/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-std/std",
	"strum/std",
	"tezos-core/std",
	"tezos-michelson/std",
	"mmr-lib/std",
	"jsonrpsee",
	"sp-blockchain",
	"log/std",
	"mmr-gadget",
	"acurast-core-ink/std"
]
mmr-gadget = [
	"futures",
	"sc-client-api",
	"sc-offchain"
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"pallet-acurast/runtime-benchmarks",
	"pallet-acurast-marketplace/runtime-benchmarks"
]
try-runtime = ["frame-support/try-runtime"]
