[package]
name = "pallet-acurast-hyperdrive-outgoing"
authors = ["Papers AG", "Parity Technologies <admin@parity.io>"]
description = "Acurast Hyperdrive is a building block allowing for general bidirectional message passing"
version = { workspace = true }
license = "MIT"
homepage = "https://docs.acurast.com/"
edition = "2021"
publish = false
repository = "https://github.com/acurast/acurast-core"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true }
sp-core = { workspace = true }
jsonrpsee = { version = "0.16.2", features = ["client-core", "server", "macros"], optional = true }
sp-blockchain = { workspace = true, optional = true }

# Acurast
pallet-acurast = { path = "../acurast", default-features = false }
pallet-acurast-marketplace = { path = "../marketplace", default-features = false}
acurast-common = { path = "../acurast/common", default-features = false }
pallet-acurast-hyperdrive = {path = "../hyperdrive", default-features = false }
mmr-lib = { package = "acurast-merkle-mountain-range",  git = "https://github.com/Acurast/merkle-mountain-range", default-features = false }

acurast-core-ink = { path = "../../ink/core", default-features = false }

# EVM
rlp = { version = "0.5.2", default-features = false }
alloy-sol-types = { version = "0.3.1", default-features = false }
alloy-primitives = { version = "0.3.1", default-features = false }

# SDKs
tezos-core = { git = "https://github.com/airgap-it/tezos-rust-sdk", default-features = false, branch = "feat/nostd" }
tezos-michelson = { git = "https://github.com/airgap-it/tezos-rust-sdk", default-features = false, branch = "feat/nostd" }
derive_more = { version = "0.99.17", default-features = false }
strum = { version = "0.24.1", default-features = false }
strum_macros = { version = "0.24.1", default-features = false }
once_cell = { version = "1.17.1", default-features = false }

# Benchmarks
hex-literal = { version = "0.4", optional = true }
frame-benchmarking = { workspace = true, optional = true }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
scale-info = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }
sp-arithmetic = { workspace = true }
sp-io = { workspace = true }
sp-api = { workspace = true }

# for RPC
serde = { version = "1.0.188", features = ["derive"], default-features = false }
thiserror = "1.0"
log = { workspace = true }

# for mmr-gadget
futures = { version = "0.3", optional = true }
sc-client-api = { workspace = true, optional = true }
sc-offchain = { workspace = true, optional = true }

[dev-dependencies]
hex-literal = "0.4"
serde_json = "1.0.85"

array-bytes = "4.1"
env_logger = "0.9"
itertools = "0.10.3"

# for mmr-gadget tests
parking_lot = "0.12.1"
sc-block-builder = { workspace = true }
sp-consensus = { workspace = true }
sp-tracing = { workspace = true }
substrate-test-runtime-client = { workspace = true }
tokio = "1.17.0"

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"acurast-common/std",
	"pallet-acurast/std",
	"pallet-acurast-marketplace/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-std/std",
	"strum/std",
	"tezos-core/std",
	"tezos-michelson/std",
	"mmr-lib/std",
	"jsonrpsee",
	"sp-blockchain",
	"log/std",
	"mmr-gadget",
	"acurast-core-ink/std"
]
mmr-gadget = [
	"futures",
	"sc-client-api",
	"sc-offchain"
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"pallet-acurast/runtime-benchmarks",
	"pallet-acurast-marketplace/runtime-benchmarks"
]
try-runtime = ["frame-support/try-runtime"]
