[package]
name = "pallet-acurast-hyperdrive"
description = "Acurast Hyperdrive is a building block allowing for general bidirectional message passing"
authors = { workspace = true }
version = { workspace = true }
repository = { workspace = true }
license = "MIT"
homepage = "https://docs.acurast.com/"
edition = "2021"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { version = "0.4", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
hex = { version = "0.4", default-features = false }
hex-literal = { version = "0.3", default-features = false }

# Acurast
pallet-acurast = { path = "../acurast", default-features = false }
pallet-acurast-marketplace = { path = "../marketplace", default-features = false}

acurast-core-ink = { path = "../../ink/core", default-features = false }
ckb-merkle-mountain-range = { version = "0.6.0", default-features = false }

# SDKs
tezos-core = { git = "https://github.com/airgap-it/tezos-rust-sdk", default-features = false, branch = "feat/nostd" }
tezos-michelson = { git = "https://github.com/airgap-it/tezos-rust-sdk", default-features = false, branch = "feat/nostd" }
derive_more = { version = "0.99.17", default-features = false }
strum = { version = "0.24.1", default-features = false }
strum_macros = { version = "0.24.1", default-features = false }
once_cell = { version = "1.17.1", default-features = false }

# EVM
rlp = { version = "0.5.2", default-features = false }
alloy-sol-types = { version = "0.3.1", default-features = false }

# Benchmarks
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0", optional = true, default-features = false }

# Substrate
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0", default-features = false }
scale-info = { version = "2.2.0", default-features = false, features = [
	"derive",
] }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0", default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0", default-features = false }
log = "0.4.20"


[features]
default = ["std"]
std = [
	"alloy-sol-types/std",
	"codec/std",
	"hex/std",
	"rlp/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-acurast/std",
	"pallet-acurast-marketplace/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"strum/std",
	"tezos-core/std",
	"tezos-michelson/std",
	"acurast-core-ink/std"
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"pallet-acurast/runtime-benchmarks",
	"pallet-acurast-marketplace/runtime-benchmarks"
]
try-runtime = ["frame-support/try-runtime"]
