[package]
name = "pallet-acurast-hyperdrive"
description = "The Hyperdrive pallet enables the Acurast protocol cross-chain. It prepares data to be sent to the Acurast proxy on a target chain and interprets received messages from that proxy."
authors = { workspace = true }
version = { workspace = true }
repository = { workspace = true }
license = "MIT"
homepage = "https://docs.acurast.com/"
edition = "2021"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { workspace = true }
parity-scale-codec = { workspace = true }
sp-core = { workspace = true }
hex = { version = "0.4", default-features = false }
hex-literal = { version = "0.4", default-features = false }

# Acurast
pallet-acurast = { path = "../acurast", default-features = false }
pallet-acurast-marketplace = { path = "../marketplace", default-features = false}
pallet-acurast-hyperdrive-ibc = { workspace = true }

acurast-core-ink = { path = "../../ink/core", default-features = false }

# SDKs
tezos-core = { git = "https://github.com/airgap-it/tezos-rust-sdk", default-features = false, branch = "feat/nostd" }
tezos-michelson = { git = "https://github.com/airgap-it/tezos-rust-sdk", default-features = false, branch = "feat/nostd" }
derive_more = { version = "0.99.17", default-features = false }
strum = { version = "0.24.1", default-features = false }
strum_macros = { version = "0.24.1", default-features = false }
once_cell = { version = "1.17.1", default-features = false }

# EVM
rlp = { version = "0.5.2", default-features = false }
alloy-sol-types = { version = "0.3.1", default-features = false }

# Benchmarks
frame-benchmarking = { workspace = true, optional = true }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
scale-info = { workspace = true }
sp-std = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-arithmetic = { workspace = true }

[dev-dependencies]
sp-runtime = { workspace = true }
pallet-timestamp = { workspace = true }
log = { workspace = true }


[features]
default = ["std"]
std = [
	"alloy-sol-types/std",
	"parity-scale-codec/std",
	"hex/std",
	"rlp/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-acurast/std",
	"pallet-acurast-marketplace/std",
	"pallet-acurast-hyperdrive-ibc/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"strum/std",
	"tezos-core/std",
	"tezos-michelson/std",
	"acurast-core-ink/std"
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"pallet-acurast/runtime-benchmarks",
	"pallet-acurast-marketplace/runtime-benchmarks",
	"pallet-acurast-hyperdrive-ibc/runtime-benchmarks"
]
try-runtime = ["frame-support/try-runtime"]
