[package]
name = "pallet-acurast-marketplace"
description = "FRAME pallet with the Acurast marketplace."
authors = { workspace = true }
version = { workspace = true }
repository = { workspace = true }
license = "MIT"
homepage = "https://docs.acurast.com/"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
itertools = { version = "0.10.5", default-features = false }

# Substrate
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-std = { workspace = true }
sp-io = { workspace = true }
sp-core = { workspace = true }
pallet-timestamp = { workspace = true }

# for RPC
sp-blockchain = { workspace = true, optional = true }
jsonrpsee = { version = "0.16.2", features = [
	"client-core",
	"server",
	"macros",
], optional = true }
sp-api = { workspace = true }
serde = { version = "1.0.188", features = ["derive"], default-features = false }
thiserror = { version = "1.0", optional = true }
log = { workspace = true }

# Polkadot
xcm = { workspace = true }
xcm-executor = { workspace = true }
xcm-builder = { workspace = true }

# Acurast
pallet-acurast = { path = "../acurast", default-features = false }
acurast-reputation = { path = "./reputation", default-features = false }

# benchmarks
hex-literal = { version = "0.4", optional = true }
parachain-info = { workspace = true, optional = true }
pallet-balances = { workspace = true, optional = true }
parachains-common = { workspace = true, optional = true }
pallet-acurast-processor-manager = { path = "../processor-manager", default-features = false, optional = true }

[dev-dependencies]
base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }
hex-literal = "0.3"
serde_json = "1.0.85"

sp-version = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std"] }
parachain-info = { workspace = true }
parachains-common = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"hex-literal",
	"parachain-info",
	"pallet-balances/runtime-benchmarks",
	"parachains-common",
	"pallet-balances/runtime-benchmarks",
	"pallet-acurast/runtime-benchmarks",
	"pallet-acurast-processor-manager/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
]

std = [
	"base64/std",
	"parity-scale-codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"parachain-info/std",
	"parachains-common/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
	"sp-version/std",
	"pallet-acurast/std",
	"acurast-reputation/std",
	"jsonrpsee",
	"sp-blockchain",
	"log/std",
	"thiserror",
	"sp-blockchain",
]
try-runtime = ["frame-support/try-runtime"]
