[package]
name = "pallet-parachain-staking"
description = "parachain staking pallet for collator selection and reward distribution"
edition = "2021"
version = "3.0.0"

[dependencies]
log = { version = "0.4", default-features = false }
serde = { version = "1.0.188", default-features = false }
derive_more = { version = "0.99.17" }

# Substrate
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false, optional = true,  tag = "polkadot-v1.1.0" }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false, tag = "polkadot-v1.1.0" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false, tag = "polkadot-v1.1.0" }
parity-scale-codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"], default-features = false }
scale-info = { version = "2.2.0", default-features = false, features = ["derive"] }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false, tag = "polkadot-v1.1.0" }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false, tag = "polkadot-v1.1.0" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
pallet-staking-reward-fn = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
substrate-fixed = { git = "https://github.com/encointer/substrate-fixed", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
num-traits = { version = "0.2.8", default-features = false }

# Nimbus
nimbus-primitives = { git = "https://github.com/acurast/nimbus", default-features = false, branch = "polkadot-v1.1.0" }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
similar-asserts = "1.1.0"
sp-io = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.1.0" }

[features]
default = [ "std" ]
std = [
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"nimbus-primitives/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
	"num-traits/std",
]
runtime-benchmarks = [ "frame-benchmarking" ]
try-runtime = [ "frame-support/try-runtime" ]
