[package]
name = "pallet-acurast-processor-manager"
authors = { workspace = true }
version = { workspace = true }
repository = { workspace = true }
license = "MIT"
homepage = "https://docs.acurast.com/"
edition = "2021"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true }
sp-core = { workspace = true }

acurast-common = { workspace = true }

# Substrate
frame-benchmarking = { workspace = true, optional = true }
sp-io = { workspace = true, optional = true }
pallet-balances = { workspace = true, optional = true }
pallet-uniques = { workspace = true, optional = true }
pallet-timestamp = { workspace = true, optional = true }
hex-literal = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
scale-info = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std"] }
pallet-uniques = { workspace = true, features = ["std"] }
pallet-timestamp = { workspace = true, features = ["std"] }
pallet-acurast = { workspace = true, features = ["std"] }
hex-literal = { workspace = true }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"acurast-common/std",
	"sp-core/std",
	"pallet-uniques/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-io",
	"pallet-balances/runtime-benchmarks",
	"pallet-uniques/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"hex-literal",
]
try-runtime = ["frame-support/try-runtime"]
