[package]
name = "pallet-acurast-rewards-treasury"
authors = { workspace = true }
version = { workspace = true }
repository = { workspace = true }
license = "MIT"
homepage = "https://docs.acurast.com/"
edition = "2021"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true }
log = { workspace = true }
pallet-balances = { workspace = true }

acurast-common = { path = "../acurast/common", default-features = false }

# Benchmarks
frame-benchmarking = { workspace = true, optional = true }
sp-io = { workspace = true, optional = true }
sp-core = { workspace = true, optional = true }
pallet-uniques = { workspace = true, optional = true }
pallet-timestamp = { workspace = true, optional = true }
hex-literal = { workspace = true, optional = true }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
scale-info = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }
sp-arithmetic = { workspace = true }

serde = { version = "1.0.188", features = ["derive"], default-features = false }

[dev-dependencies]
sp-io = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std"] }
pallet-uniques = { workspace = true, features = ["std"] }
pallet-timestamp = { workspace = true, features = ["std"] }
hex-literal = { workspace = true }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"sp-runtime/std",
	"acurast-common/std",
	"pallet-uniques/std"
]
try-runtime = ["frame-support/try-runtime"]
